--- a/abhijit.html
+++ b/abhijit.html
@@ -15,43 +15,52 @@
 
 <body>
 
-  <!-- Navbar -->
-  <nav class="navbar navbar-expand-lg navbar-light bg-orange">
-    <div class="container">
-      <a href="index.html" class="navbar-brand">
-        <img src="image/shivShenaLogo.png" alt="logo" height="80" width="80">
-        <span class="shivsena-text">शिवसेना India</span>
-      </a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav ml-auto">
-          <li class="nav-item">
-            <a class="nav-link" href="index.html">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="ourmp.html">Our M.Ps</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="media.html">Media</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="contact.html">Contact us</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link btn btn-primary" href="form.html">Join Shivsena</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link btn btn-primary" href="donation.html">Make a Donation</a>
-          </li>
-        </ul>
-      </div>
-    </div>
-  </nav>
+    <!-- Navbar -->
+    <nav class="navbar navbar-expand-lg navbar-light bg-orange">
+        <div class="container">
+            <a href="index.html" class="navbar-brand">
+                <img src="image/shivShenaLogo.png" alt="logo" height="80" width="80">
+                <span class="shivsena-text">शिवसेना India</span>
+            </a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="index.html">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="ourmp.html">Our M.Ps</a>
+                    </li>
+                    <!-- dropdown -->
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            Media
+                        </a>
+                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <a class="dropdown-item" href="#">Press Releases</a>
+                            <a class="dropdown-item" href="photogallery.html">Photo Gallery</a>
+                            <a class="dropdown-item" href="media.html">Video Gallery</a>
+                        </div>
+                        <!-- dropdown -->
+                    <li class="nav-item">
+                        <a class="nav-link" href="contact.html">Contact us</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link btn btn-primary" href="form.html">Join Shivsena</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link btn btn-primary" href="donation.html">Make a Donation</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
 
-  <!-- Navbar End -->
+    <!-- Navbar End -->
 
     <br>
     <section>
@@ -80,7 +89,7 @@
                         education. He obtained a Bachelor's degree in Political Science from a renowned institution,
                         where he
                         further honed his analytical and critical thinking skills.</p>
-                    <h3>Political Career and Contributions</h3>
+                    <h3 class="title-text">Political Career and Contributions</h3>
                     <p class="content">Adsuls entry into politics marked the beginning of his remarkable journey of
                         public service. He joined a
                         prominent political party and quickly garnered attention for his exceptional leadership
@@ -95,7 +104,7 @@
                         education, and employment opportunities has positively impacted the lives of countless
                         individuals in
                         the region.</p>
-                    <h3>Key Achievements</h3>
+                    <h3 class="title-text">Key Achievements</h3>
                     <p class="content">Infrastructure Development Under Adsuls leadership, Amravati District has
                         witnessed a remarkable
                         transformation in its infrastructure. Several significant projects, including the construction
@@ -105,7 +114,7 @@
                         growth. Adsuls unwavering commitment to improving the quality of life for residents has been
                         instrumental in driving progress and development.
                     </p>
-                    <h3>Educational Reforms</h3>
+                    <h3 class="title-text">Educational Reforms</h3>
                     <p class="content">Recognizing the importance of education as a catalyst for socio-economic
                         advancement, Adsul has played a
                         pivotal role in implementing crucial reforms in the education sector. He has championed
@@ -116,7 +125,7 @@
                         to shape
                         a prosperous future.
                     </p>
-                    <h3>Healthcare Initiatives</h3>
+                    <h3 class="title-text">Healthcare Initiatives</h3>
                     <p class="content">With a vision to ensure accessible and affordable healthcare for all, Adsul has
                         spearheaded various
                         healthcare initiatives. He has worked towards strengthening healthcare infrastructure, setting
@@ -125,7 +134,7 @@
                         healthcare practices. Adsuls endeavors have significantly contributed to improving the overall
                         well-being of the residents of Amravati District.
                     </p>
-                    <h3>Future Endeavors and Vision</h3>
+                    <h3 class="title-text">Future Endeavors and Vision</h3>
                     <p class="content">Looking ahead, Abhijit Adsul remains committed to serving the people of Amravati
                         District and driving
                         sustainable growth. His vision encompasses empowering marginalized communities, promoting
@@ -150,7 +159,7 @@
                     <ul class="list-unstyled">
                         <li><a target="_blank" href="https://rb.gy/5glkd">History of Shivshena</a></li>
                         <li><a href="#">Our Ideology</a></li>
-                        <li><a href="#">Our Ministers in Maharashtra Government</a></li>
+                        <li><a href="ministers.html">Our Ministers in Maharashtra Government</a></li>
                     </ul>
                 </div>
                 <div class="col-md-3 col-sm-6">
@@ -170,8 +179,8 @@
                     <h3>Media Resource</h3>
                     <ul class="list-unstyled">
                         <li><a href="#">Press Releases</a></li>
-                        <li><a href="#">Photo Gallery</a></li>
-                        <li><a href="#">Video Gallery</a></li>
+                        <li><a href="photogallery.html">Photo Gallery</a></li>
+                        <li><a href="media.html">Video Gallery</a></li>
                     </ul>
                 </div>
                 <div class="col-md-3 col-sm-6">
@@ -187,7 +196,7 @@
                         <img src="image/shivShenaLogo.png" alt="Shivshena Logo" width="100">
                     </div>
                     <div class="copy-text text-center mt-3">
-                        <p>Shivsena India | &#169; 2023</p>
+                        <h4 class="copy-text">Shivsena India | &#169; 2023</h4>
                     </div>
                 </div>
             </div>
@@ -196,7 +205,6 @@
     <!-- Footer End -->
 
     <!-- Bootstrap JS -->
-    <script src="JavaScript/slide.js"></script>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
         integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
         crossorigin="anonymous"></script>
