--- a/anandraoadsul.html
+++ b/anandraoadsul.html
@@ -15,43 +15,52 @@
 
 <body>
 
-  <!-- Navbar -->
-  <nav class="navbar navbar-expand-lg navbar-light bg-orange">
-    <div class="container">
-      <a href="index.html" class="navbar-brand">
-        <img src="image/shivShenaLogo.png" alt="logo" height="80" width="80">
-        <span class="shivsena-text">शिवसेना India</span>
-      </a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav ml-auto">
-          <li class="nav-item">
-            <a class="nav-link" href="index.html">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="ourmp.html">Our M.Ps</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="media.html">Media</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="contact.html">Contact us</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link btn btn-primary" href="form.html">Join Shivsena</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link btn btn-primary" href="donation.html">Make a Donation</a>
-          </li>
-        </ul>
-      </div>
-    </div>
-  </nav>
+    <!-- Navbar -->
+    <nav class="navbar navbar-expand-lg navbar-light bg-orange">
+        <div class="container">
+            <a href="index.html" class="navbar-brand">
+                <img src="image/shivShenaLogo.png" alt="logo" height="80" width="80">
+                <span class="shivsena-text">शिवसेना India</span>
+            </a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="index.html">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="ourmp.html">Our M.Ps</a>
+                    </li>
+                    <!-- dropdown -->
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            Media
+                        </a>
+                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <a class="dropdown-item" href="#">Press Releases</a>
+                            <a class="dropdown-item" href="photogallery.html">Photo Gallery</a>
+                            <a class="dropdown-item" href="media.html">Video Gallery</a>
+                        </div>
+                        <!-- dropdown -->
+                    <li class="nav-item">
+                        <a class="nav-link" href="contact.html">Contact us</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link btn btn-primary" href="form.html">Join Shivsena</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link btn btn-primary" href="donation.html">Make a Donation</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
 
-  <!-- Navbar End -->
+    <!-- Navbar End -->
     <br>
     <section>
         <div class="container">
@@ -72,7 +81,7 @@
                         Shiv Sena (SS) political party. He had represented the Amravati constituency in 15th Lok
                         Sabha and Buldhana constituency of Maharashtra in the 14th Lok Sabha, 13th Lok Sabha and
                         11th Lok Sabha. He has been honored with Sansad Ratna Award in 2011, 2012 and 2013.</p>
-                    <h3>Career</h3>
+                    <h3 class="title-text">Career</h3>
                     <p class="content">He served as a Member of Parliament (Lok Sabha) from Amravati (Lok Sabha
                         constituency) till
                         2019. He served as the Union Minister of State for Finance in Prime Minister Atal Bihari
@@ -80,7 +89,7 @@
                         in the Shiv Sena-led government in Maharashtra. Adsul contested the 2019 Lok Sabha election
                         as a Shiv Sena candidate, and he lost the election by 30,000 votes to Navneet Kaur Rana, a
                         former Telugu actress who contested the election as an independent candidate.</p>
-                    <h3>Positions held</h3>
+                    <h3 class="title-text">Positions held</h3>
                     <p class="content">1996: Elected to 11th Lok Sabha (1st term) <br>
                         1999: Re-elected to 13th Lok Sabha (2nd term) <br>
                         Oct. 1999-Jul. 2002: Chief Whip, Shiv Sena Parliamentary Party, Lok Sabha.<br>
@@ -98,7 +107,7 @@
                         Chemicals and Fertilizers.<br>
                         2018: Appointed Leader of Shiv Sena Party.
                     </p>
-                    <h3>Political Career</h3>
+                    <h3 class="title-text">Political Career</h3>
                     <p class="content">Constituency: Adsul has represented the Amravati constituency in the Lok Sabha,
                         the lower
                         house of the Indian Parliament. He has been elected multiple times from this constituency.
@@ -146,8 +155,8 @@
                     <h3>Media Resource</h3>
                     <ul class="list-unstyled">
                         <li><a href="#">Press Releases</a></li>
-                        <li><a href="#">Photo Gallery</a></li>
-                        <li><a href="#">Video Gallery</a></li>
+                        <li><a href="photogallery.html">Photo Gallery</a></li>
+                        <li><a href="media.html">Video Gallery</a></li>
                     </ul>
                 </div>
                 <div class="col-md-3 col-sm-6">
@@ -163,7 +172,7 @@
                         <img src="image/shivShenaLogo.png" alt="Shivshena Logo" width="100">
                     </div>
                     <div class="copy-text text-center mt-3">
-                        <p>Shivsena India | &#169; 2023</p>
+                        <h4 class="copy-text">Shivsena India | &#169; 2023</h4>
                     </div>
                 </div>
             </div>
