--- a/anshuman.html
+++ b/anshuman.html
@@ -15,43 +15,52 @@
 
 <body>
 
-  <!-- Navbar -->
-  <nav class="navbar navbar-expand-lg navbar-light bg-orange">
-    <div class="container">
-      <a href="index.html" class="navbar-brand">
-        <img src="image/shivShenaLogo.png" alt="logo" height="80" width="80">
-        <span class="shivsena-text">शिवसेना India</span>
-      </a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav ml-auto">
-          <li class="nav-item">
-            <a class="nav-link" href="index.html">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="ourmp.html">Our M.Ps</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="media.html">Media</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="contact.html">Contact us</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link btn btn-primary" href="form.html">Join Shivsena</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link btn btn-primary" href="donation.html">Make a Donation</a>
-          </li>
-        </ul>
-      </div>
-    </div>
-  </nav>
+    <!-- Navbar -->
+    <nav class="navbar navbar-expand-lg navbar-light bg-orange">
+        <div class="container">
+            <a href="index.html" class="navbar-brand">
+                <img src="image/shivShenaLogo.png" alt="logo" height="80" width="80">
+                <span class="shivsena-text">शिवसेना India</span>
+            </a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="index.html">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="ourmp.html">Our M.Ps</a>
+                    </li>
+                    <!-- dropdown -->
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            Media
+                        </a>
+                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <a class="dropdown-item" href="#">Press Releases</a>
+                            <a class="dropdown-item" href="photogallery.html">Photo Gallery</a>
+                            <a class="dropdown-item" href="media.html">Video Gallery</a>
+                        </div>
+                        <!-- dropdown -->
+                    <li class="nav-item">
+                        <a class="nav-link" href="contact.html">Contact us</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link btn btn-primary" href="form.html">Join Shivsena</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link btn btn-primary" href="donation.html">Make a Donation</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
 
-  <!-- Navbar End -->
+    <!-- Navbar End -->
     <br>
     <section>
         <div class="container">
@@ -72,7 +81,7 @@
                         absolute dedication towards all of religious programs and organizes a number of religious major
                         events
                         at the Hanuman Ji Temple.</p>
-                    <h3>Profession : Business</h3>
+                    <h3 class="title-text">Profession : Business</h3>
                     <p class="content">Philanthropist, Entrepreneur, Social Worker, RTI Activist, Corporate Head Honcho,
                         Private Equity
                         Investor, Banker, Cooperator, Rights Activist, Litigant to protect the integrity of Democracy in
@@ -83,7 +92,7 @@
                         Financial Budget
                         Strategist, Brainstormer for Development of the Country
                     </p>
-                    <h3>Social and Cultural Activities</h3>
+                    <h3 class="title-text">Social and Cultural Activities</h3>
                     <p class="content">Literary, Artistic and Scientific Founder, Dhanvarsha Group A Business Group
                         focused on Saving the
                         Cooperative Movement, Urban Cooperative Banks across the country are given free legal support to
@@ -94,7 +103,7 @@
                         courts
                         across
                     </p>
-                    <h3>Accomplishments and other Special Interests</h3>
+                    <h3 class="title-text">Accomplishments and other Special Interests</h3>
                     <p class="content">The country to ensure the banks licenses are not cancelled & the same do not come
                         under the directions of
                         Section 35A of the Banking Regulations Act. 1949. Running Corruption Free India (NGO/Trust )
@@ -111,7 +120,7 @@
                         daily
                         basis over a 1000 plus people are fed
                     </p>
-                    <h3>Other Information</h3>
+                    <h3 class="title-text">Other Information</h3>
                     <p class="content">Has undertaken initiatives in social engineering in order to promote harmony and
                         unity in the country;
                         organizing special meetings and programmes with the objective of providing guidance to several
@@ -158,8 +167,8 @@
                     <h3>Media Resource</h3>
                     <ul class="list-unstyled">
                         <li><a href="#">Press Releases</a></li>
-                        <li><a href="#">Photo Gallery</a></li>
-                        <li><a href="#">Video Gallery</a></li>
+                        <li><a href="photogallery.html">Photo Gallery</a></li>
+                        <li><a href="media.html">Video Gallery</a></li>
                     </ul>
                 </div>
                 <div class="col-md-3 col-sm-6">
@@ -175,7 +184,7 @@
                         <img src="image/shivShenaLogo.png" alt="Shivshena Logo" width="100">
                     </div>
                     <div class="copy-text text-center mt-3">
-                        <p>Shivsena India | &#169; 2023</p>
+                        <h4 class="copy-text">Shivsena India | &#169; 2023</h4>
                     </div>
                 </div>
             </div>
