--- a/constitution.html
+++ b/constitution.html
@@ -34,9 +34,18 @@
                     <li class="nav-item">
                         <a class="nav-link" href="ourmp.html">Our M.Ps</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="media.html">Media</a>
-                    </li>
+                    <!-- dropdown -->
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            Media
+                        </a>
+                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <a class="dropdown-item" href="#">Press Releases</a>
+                            <a class="dropdown-item" href="photogallery.html">Photo Gallery</a>
+                            <a class="dropdown-item" href="media.html">Video Gallery</a>
+                        </div>
+                        <!-- dropdown -->>
                     <li class="nav-item">
                         <a class="nav-link" href="contact.html">Contact us</a>
                     </li>
@@ -92,8 +101,8 @@
                     <h3>Media Resource</h3>
                     <ul class="list-unstyled">
                         <li><a href="#">Press Releases</a></li>
-                        <li><a href="#">Photo Gallery</a></li>
-                        <li><a href="#">Video Gallery</a></li>
+                        <li><a href="photogallery.html">Photo Gallery</a></li>
+                        <li><a href="media.html">Video Gallery</a></li>
                     </ul>
                 </div>
                 <div class="col-md-3 col-sm-6">
@@ -109,7 +118,7 @@
                         <img src="image/shivShenaLogo.png" alt="Shivshena Logo" width="100">
                     </div>
                     <div class="copy-text text-center mt-3">
-                        <p>Shivsena India | &#169; 2023</p>
+                        <h4 class="copy-text">Shivsena India | &#169; 2023</h4>
                     </div>
                 </div>
             </div>
