--- a/donation.html
+++ b/donation.html
@@ -34,9 +34,18 @@
           <li class="nav-item">
             <a class="nav-link" href="ourmp.html">Our M.Ps</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="media.html">Media</a>
-          </li>
+          <!-- dropdown -->
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+              aria-haspopup="true" aria-expanded="false">
+              Media
+            </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <a class="dropdown-item" href="#">Press Releases</a>
+              <a class="dropdown-item" href="photogallery.html">Photo Gallery</a>
+              <a class="dropdown-item" href="media.html">Video Gallery</a>
+            </div>
+            <!-- dropdown -->
           <li class="nav-item">
             <a class="nav-link" href="contact.html">Contact us</a>
           </li>
@@ -92,7 +101,6 @@
       </div>
     </div>
   </div>
-
   <!-- Contact Form End -->
 
   <!-- Bootstrap JS -->
