--- a/eknathshinde.html
+++ b/eknathshinde.html
@@ -34,9 +34,18 @@
           <li class="nav-item">
             <a class="nav-link" href="ourmp.html">Our M.Ps</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="media.html">Media</a>
-          </li>
+          <!-- dropdown -->
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+              aria-haspopup="true" aria-expanded="false">
+              Media
+            </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <a class="dropdown-item" href="#">Press Releases</a>
+              <a class="dropdown-item" href="photogallery.html">Photo Gallery</a>
+              <a class="dropdown-item" href="media.html">Video Gallery</a>
+            </div>
+            <!-- dropdown -->
           <li class="nav-item">
             <a class="nav-link" href="contact.html">Contact us</a>
           </li>
@@ -90,7 +99,7 @@
             for the party. His position in the Shiv Sena became stronger after Bal Thackerays nephew Raj left
             the
             party and launched Maharashtra Navnirman Sena.</p>
-          <h3>Humble Beginnings</h3>
+          <h3 class="title-text">Humble Beginnings</h3>
           <p class="content">Eknath Shinde is a Maratha who was born in the Jawali taluka of Satara, Maharashtra
             in 9 February 1964.
             His family relocated to Thane, on Mumbais outskirts, in order to make a living. Eknath attended
@@ -111,7 +120,7 @@
             an Orthopaedic Surgeon and an elected Lok Sabha member from the Kalyan constituency since 2014.
             Shrikant
             married Vrushali in 2016 and they have one child Rudransh.</p>
-          <h3>Eknath Shinde ji Political Career</h3>
+          <h3 class="title-text">Eknath Shinde ji Political Career</h3>
           <p class="content">His first key political position was as a corporate of Thane Municipal Corporation in
             1997. 2004 he was
             first elected to the Maharashtra Legislative Assembly and appointed the Shiv Sena Thane Head in
@@ -131,7 +140,7 @@
             His journey has been a testament to the excellent impact that he has had in promoting Maharashtra on
             a
             national and global scale.</p>
-          <h3>Public Service</h3>
+          <h3 class="title-text">Public Service</h3>
           <p class="content">Since his youth days, Shinde was inspired by the ideology of Balasaheb Thackeray. He
             entered politics in
             the 1980s when he joined Shiv Sena as a Sainik, introduced by Anand Dighe, his mentor and a senior
@@ -151,55 +160,55 @@
   <!-- Footer -->
   <footer class="bg-orange text-white py-5">
     <div class="container">
-      <div class="row">
-        <div class="col-md-3 col-sm-6">
-          <h3>The Party</h3>
-          <ul class="list-unstyled">
-            <li><a target="_blank" href="https://rb.gy/5glkd">History of Shivshena</a></li>
-            <li><a href="#">Our Ideology</a></li>
-            <li><a href="#">Our Ministers in Maharashtra Government</a></li>
-          </ul>
+        <div class="row">
+            <div class="col-md-3 col-sm-6">
+                <h3>The Party</h3>
+                <ul class="list-unstyled">
+                    <li><a target="_blank" href="https://rb.gy/5glkd">History of Shivshena</a></li>
+                    <li><a href="#">Our Ideology</a></li>
+                    <li><a href="#">Our Ministers in Maharashtra Government</a></li>
+                </ul>
+            </div>
+            <div class="col-md-3 col-sm-6">
+                <h3>Leadership</h3>
+                <ul class="list-unstyled">
+                    <li><a href="balasahebstory.html">Balashaheb Thackeray Ji</a></li>
+                    <li><a href="ananddighe.html">Anand Dighe Ji</a></li>
+                    <li><a href="eknathshinde.html">Eknath Shinde Ji</a></li>
+                    <li><a href="rahulshewale.html">Rahul Shewale Ji</a></li>
+                    <li><a href="anandraoadsul.html">Anandrao Adsul Ji</a></li>
+                    <li><a href="drshrikant.html">Shrikant Shinde Ji</a></li>
+                    <li><a href="abhijit.html">Abhijit Adsul Ji</a></li>
+                    <li><a href="anshuman.html">Anshuman Joshi Ji</a></li>
+                </ul>
+            </div>
+            <div class="col-md-3 col-sm-6">
+                <h3>Media Resource</h3>
+                <ul class="list-unstyled">
+                    <li><a href="#">Press Releases</a></li>
+                    <li><a href="photogallery.html">Photo Gallery</a></li>
+                    <li><a href="media.html">Video Gallery</a></li>
+                </ul>
+            </div>
+            <div class="col-md-3 col-sm-6">
+                <h3>Documents</h3>
+                <ul class="list-unstyled">
+                    <li><a href="constitution.html">Constitution</a></li>
+                </ul>
+            </div>
         </div>
-        <div class="col-md-3 col-sm-6">
-          <h3>Leadership</h3>
-          <ul class="list-unstyled">
-            <li><a href="balasahebstory.html">Balashaheb Thackeray Ji</a></li>
-            <li><a href="ananddighe.html">Anand Dighe Ji</a></li>
-            <li><a href="eknathshinde.html">Eknath Shinde Ji</a></li>
-            <li><a href="rahulshewale.html">Rahul Shewale Ji</a></li>
-            <li><a href="anandraoadsul.html">Anandrao Adsul Ji</a></li>
-            <li><a href="drshrikant.html">Shrikant Shinde Ji</a></li>
-            <li><a href="abhijit.html">Abhijit Adsul Ji</a></li>
-            <li><a href="anshuman.html">Anshuman Joshi Ji</a></li>
-          </ul>
+        <div class="row">
+            <div class="col-12">
+                <div class="text-center">
+                    <img src="image/shivShenaLogo.png" alt="Shivshena Logo" width="100">
+                </div>
+                <div class="copy-text text-center mt-3">
+                    <h4 class="copy-text">Shivsena India | &#169; 2023</h4>
+                </div>
+            </div>
         </div>
-        <div class="col-md-3 col-sm-6">
-          <h3>Media Resource</h3>
-          <ul class="list-unstyled">
-            <li><a href="#">Press Releases</a></li>
-            <li><a href="#">Photo Gallery</a></li>
-            <li><a href="#">Video Gallery</a></li>
-          </ul>
-        </div>
-        <div class="col-md-3 col-sm-6">
-          <h3>Documents</h3>
-          <ul class="list-unstyled">
-            <li><a href="constitution.html">Constitution</a></li>
-          </ul>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-12">
-          <div class="text-center">
-            <img src="image/shivShenaLogo.png" alt="Shivshena Logo" width="100">
-          </div>
-          <div class="copy-text text-center mt-3">
-            <p>Shivsena India | &#169; 2023</p>
-          </div>
-        </div>
-      </div>
     </div>
-  </footer>
+</footer>
   <!-- Footer End -->
 
   <!-- Bootstrap JS -->
