--- a/media.html
+++ b/media.html
@@ -34,9 +34,18 @@
           <li class="nav-item">
             <a class="nav-link" href="ourmp.html">Our M.Ps</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="media.html">Media</a>
-          </li>
+          <!-- dropdown -->
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+              aria-haspopup="true" aria-expanded="false">
+              Media
+            </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <a class="dropdown-item disabled" href="#">Press Releases</a>
+              <a class="dropdown-item disabled" href="photogallery.html">Photo Gallery</a>
+              <a class="dropdown-item active" href="media.html">Video Gallery</a>
+            </div>
+            <!-- dropdown -->
           <li class="nav-item">
             <a class="nav-link" href="contact.html">Contact us</a>
           </li>
@@ -165,55 +174,55 @@
   <!-- Footer -->
   <footer class="bg-orange text-white py-5">
     <div class="container">
-      <div class="row">
-        <div class="col-md-3 col-sm-6">
-          <h3>The Party</h3>
-          <ul class="list-unstyled">
-            <li><a target="_blank" href="https://rb.gy/5glkd">History of Shivshena</a></li>
-            <li><a href="#">Our Ideology</a></li>
-            <li><a href="#">Our Ministers in Maharashtra Government</a></li>
-          </ul>
+        <div class="row">
+            <div class="col-md-3 col-sm-6">
+                <h3>The Party</h3>
+                <ul class="list-unstyled">
+                    <li><a target="_blank" href="https://rb.gy/5glkd">History of Shivshena</a></li>
+                    <li><a href="#">Our Ideology</a></li>
+                    <li><a href="#">Our Ministers in Maharashtra Government</a></li>
+                </ul>
+            </div>
+            <div class="col-md-3 col-sm-6">
+                <h3>Leadership</h3>
+                <ul class="list-unstyled">
+                    <li><a href="balasahebstory.html">Balashaheb Thackeray Ji</a></li>
+                    <li><a href="ananddighe.html">Anand Dighe Ji</a></li>
+                    <li><a href="eknathshinde.html">Eknath Shinde Ji</a></li>
+                    <li><a href="rahulshewale.html">Rahul Shewale Ji</a></li>
+                    <li><a href="anandraoadsul.html">Anandrao Adsul Ji</a></li>
+                    <li><a href="drshrikant.html">Shrikant Shinde Ji</a></li>
+                    <li><a href="abhijit.html">Abhijit Adsul Ji</a></li>
+                    <li><a href="anshuman.html">Anshuman Joshi Ji</a></li>
+                </ul>
+            </div>
+            <div class="col-md-3 col-sm-6">
+                <h3>Media Resource</h3>
+                <ul class="list-unstyled">
+                    <li><a href="#">Press Releases</a></li>
+                    <li><a href="photogallery.html">Photo Gallery</a></li>
+                    <li><a href="media.html">Video Gallery</a></li>
+                </ul>
+            </div>
+            <div class="col-md-3 col-sm-6">
+                <h3>Documents</h3>
+                <ul class="list-unstyled">
+                    <li><a href="constitution.html">Constitution</a></li>
+                </ul>
+            </div>
         </div>
-        <div class="col-md-3 col-sm-6">
-          <h3>Leadership</h3>
-          <ul class="list-unstyled">
-            <li><a href="balasahebstory.html">Balashaheb Thackeray Ji</a></li>
-            <li><a href="ananddighe.html">Anand Dighe Ji</a></li>
-            <li><a href="eknathshinde.html">Eknath Shinde Ji</a></li>
-            <li><a href="rahulshewale.html">Rahul Shewale Ji</a></li>
-            <li><a href="anandraoadsul.html">Anandrao Adsul Ji</a></li>
-            <li><a href="drshrikant.html">Shrikant Shinde Ji</a></li>
-            <li><a href="abhijit.html">Abhijit Adsul Ji</a></li>
-            <li><a href="anshuman.html">Anshuman Joshi Ji</a></li>
-          </ul>
+        <div class="row">
+            <div class="col-12">
+                <div class="text-center">
+                    <img src="image/shivShenaLogo.png" alt="Shivshena Logo" width="100">
+                </div>
+                <div class="copy-text text-center mt-3">
+                    <h4 class="copy-text">Shivsena India | &#169; 2023</h4>
+                </div>
+            </div>
         </div>
-        <div class="col-md-3 col-sm-6">
-          <h3>Media Resource</h3>
-          <ul class="list-unstyled">
-            <li><a href="#">Press Releases</a></li>
-            <li><a href="#">Photo Gallery</a></li>
-            <li><a href="#">Video Gallery</a></li>
-          </ul>
-        </div>
-        <div class="col-md-3 col-sm-6">
-          <h3>Documents</h3>
-          <ul class="list-unstyled">
-            <li><a href="constitution.html">Constitution</a></li>
-          </ul>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-12">
-          <div class="text-center">
-            <img src="image/shivShenaLogo.png" alt="Shivshena Logo" width="100">
-          </div>
-          <div class="copy-text text-center mt-3">
-            <p>Shivsena India | &#169; 2023</p>
-          </div>
-        </div>
-      </div>
     </div>
-  </footer>
+</footer>
   <!-- Footer End -->
 
   <!-- Bootstrap JS -->
