--- a/rahulshewale.html
+++ b/rahulshewale.html
@@ -34,9 +34,18 @@
                     <li class="nav-item">
                         <a class="nav-link" href="ourmp.html">Our M.Ps</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="media.html">Media</a>
-                    </li>
+                    <!-- dropdown -->
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            Media
+                        </a>
+                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <a class="dropdown-item" href="#">Press Releases</a>
+                            <a class="dropdown-item" href="photogallery.html">Photo Gallery</a>
+                            <a class="dropdown-item" href="media.html">Video Gallery</a>
+                        </div>
+                        <!-- dropdown -->
                     <li class="nav-item">
                         <a class="nav-link" href="contact.html">Contact us</a>
                     </li>
@@ -74,7 +83,7 @@
                         Corporation (BMC), the municipal corporation of the city of Mumbai. He held the position from
                         2010 to
                         2014.</p>
-                    <h3>Early & Personal Life</h3>
+                    <h3 class="title-text">Early & Personal Life</h3>
                     <p class="content">Rahul Shewale was born on 14 April 1973 to Ramesh Sambhaji Shewale, an Indian
                         Navy officer and Jayashri
                         Shewale, an employee of MTNL. His elder brother Avinash is a software engineer, who has settled
@@ -86,7 +95,7 @@
                         couple have two sons: Swayam and Vedant. Shewale is a Diploma holder in Civil Engineering from
                         Government Polytechnic, Bandra
                     </p>
-                    <h3>Career</h3>
+                    <h3 class="title-text">Career</h3>
                     <p class="content">Rahul Shewale is a two time MP. He holds the record for being elected the
                         Chairman of the standing
                         committee of the BMC most times. Mr. Shewale joined Shiv Sena officially in 2014 when he decided
@@ -137,8 +146,8 @@
                     <h3>Media Resource</h3>
                     <ul class="list-unstyled">
                         <li><a href="#">Press Releases</a></li>
-                        <li><a href="#">Photo Gallery</a></li>
-                        <li><a href="#">Video Gallery</a></li>
+                        <li><a href="photogallery.html">Photo Gallery</a></li>
+                        <li><a href="media.html">Video Gallery</a></li>
                     </ul>
                 </div>
                 <div class="col-md-3 col-sm-6">
@@ -154,7 +163,7 @@
                         <img src="image/shivShenaLogo.png" alt="Shivshena Logo" width="100">
                     </div>
                     <div class="copy-text text-center mt-3">
-                        <p>Shivsena India | &#169; 2023</p>
+                        <h4 class="copy-text">Shivsena India | &#169; 2023</h4>
                     </div>
                 </div>
             </div>
